[gd_scene load_steps=7 format=3 uid="uid://bppbq84fl0vk7"]

[ext_resource type="Script" uid="uid://dxpvut6re4gef" path="res://Scripts/enemylaser.gd" id="1_mjnbg"]
[ext_resource type="Texture2D" uid="uid://bdfgkjsvnpqdr" path="res://skins/Bullet-.30/Bullet-.30-1.svg" id="2_yb45u"]
[ext_resource type="Texture2D" uid="uid://dxirj81xjqpx8" path="res://skins/Bullet-.30/Bullet-.30-2.svg" id="3_4pjdi"]
[ext_resource type="Texture2D" uid="uid://ciyrc3gxi603b" path="res://skins/Bullet-.30/Bullet-.30-3.svg" id="4_adrre"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yb45u"]
size = Vector2(5, 2.00001)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wc6t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yb45u")
}, {
"duration": 1.0,
"texture": ExtResource("3_4pjdi")
}, {
"duration": 1.0,
"texture": ExtResource("4_adrre")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="enemylaser" type="Area2D"]
process_mode = 1
rotation = -1.57079
script = ExtResource("1_mjnbg")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.499994, -1.56839e-05)
shape = SubResource("RectangleShape2D_yb45u")

[node name="Enemy_laser_die_timer" type="Timer" parent="."]
wait_time = 8.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_7wc6t")
speed_scale = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Enemy_laser_die_timer" to="." method="_on_enemy_laser_die_timer_timeout"]
